--- a/app/globals.css
+++ b/app/globals.css
@@ -126,3 +126,8 @@
   padding-left: 0.8rem;
   text-align: left;
 }
+
+.custom-rounded{
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
