--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,14 @@
 }
 
 .custom-rounded{
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 0px, 140px, 140px, 0px;
+}
+
+.header{
+  border-radius:0px, 0px, 40px, 10px;
+}
+
+.custom-italic::placeholder{
+  transform: translateY(-10px);
+  font-size: 13px;
 }
