--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
 .tabs-corner{
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  box-shadow: 4px 0 6px -1px rgba(0, 0, 0, 0.1), 2px 0 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 5px 0px 4px 0px rgba(0, 0, 0, 0.05);
 }
 
 .rotation{
@@ -103,7 +103,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: darkgreen;
+  background-color: #005640A6;
   border-radius: 1rem;
   border: 3px solid transparent;
   background-clip: content-box;
@@ -128,7 +128,7 @@
 }
 
 .custom-rounded{
-  border-radius: 0px, 140px, 140px, 0px;
+  border-radius: 10px, 10px, 0px, 0px;
 }
 
 .header{
